        public_html/admin/plugins/links/category.php

Media Gallery plugin
--------------------
- Fixed an issue where hidden albums would prevent other sub-albums
  from displaying.
        public_html/mediagallery/album.php

Polls plugin
------------
- Updated hebrew language file
        private/plugins/polls/language/hebrew_utf-8.php

Site Tailor plugin
------------------
- Added Display After field when editing a menu item
        public_html/admin/plugins/sitetailor/index.php
        private/plugins/sitetailor/templates/editelement.thtml

- Fixed error where the menu hover image was used regardless of the Graphics/
  Color setting.
        public_html/layout/nouveau/functions.php

- Fixed error where static pages would reset when edited.
        public_html/admin/plugins/sitetailor/index.php

- Fixed a E_ALL error - removed references to individual perm_ options
        private/plugins/sitetailor/classes/classMenuElement.php

Staticpages plugin
------------------
- Removed unused 'config_data' entry from the plugin uninstall function
        private/plugins/staticpages/functions.inc
- Fixed E_ALL errors
        private/plugins/staticpages/services.inc.php

FCKEditor
---------
- Updated to v2.6.2 Production Release (FF3 Fixes)
        public_html\fckeditor\editor\_source\classes\fckstyle.js
        public_html\fckeditor\editor\_source\internals\fckdomtools.js
        public_html\fckeditor\editor\filemanager\browser\default\frmactualfolder.html
        public_html\fckeditor\editor\_source\internals\fckselection_ie.js
        public_html\fckeditor\editor\filemanager\browser\default\js\common.js
        public_html\fckeditor\editor\_source\classes\fckiecleanup.js
        public_html\fckeditor\editor\filemanager\browser\default\browser.html
        public_html\fckeditor\editor\js\fckeditorcode_ie.js
        public_html\fckeditor\fckpackager.xml
        public_html\fckeditor\editor\_source\internals\fckdocumentprocessor.js