@@ -559,6 +559,7 @@ function hsv(a){
         <input type="hidden" id="mode" name="mode" value="savecfg"{xhtml}>
         <input type="submit" id="execute" name="execute" value="{$LANG_ST01[save]}"{xhtml}>
         <input type="reset"  id="reset"   name="reset"   value="{$LANG_ST01[reset]}"{xhtml}>
+        <input type="submit" id="defaults" name="defaults"  value="{$LANG_ST01[defaults]}" onclick="return confirm('{$LANG_ST01[confirm_reset]}');" {xhtml}>
       </div>
     </form>
   </div>
