@@ -6,7 +6,14 @@
 <!--
 window.addEvent('load',function() {
     $('menutype').addEvent('change',toggleFields);
-
+    $('pid').addEvent('change',function(){
+         var option_id = this.getValue();
+         var url = 'getorder.php?optionid='+option_id+'&amp;edit=1';
+         new Ajax(url, {
+              method: 'get',
+              update: $('displayafter')
+         }).request();
+    });
     toggleFields();
 });
 
